--- a/frontend/css/articles.css
+++ b/frontend/css/articles.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     width: 75%;
-    margin: 110px auto 0px auto;
+    margin: 110px auto 0 auto;
 }
 
 /*标题树*/
@@ -34,7 +34,7 @@
 .titleTree a {
     display: block;
     position: relative;
-    margin: 5px 0px 5px 0px;
+    margin: 5px 0;
     text-decoration: none;
     color: #4B4B4C;
 }
@@ -62,13 +62,19 @@
     left: 0;
 }
 
+/*div左边插入虚线*/
 .titleTree div {
-    display: none;
     background-color: #ffffff;
     margin-left: 15px;
     border-left: 1px dotted #cccccc;
 }
 
+/*选中的a元素*/
+.titleTree a.selected {
+    background-color: #aaaaaa;
+}
+
+/*前面插入左箭头*/
 .titleTree a:has(+div)::after {
     position: absolute;
     display: inline-block;
@@ -82,19 +88,8 @@
     border-left: 15px solid #cccccc;
 }
 
-/*选中的a元素*/
-.titleTree a.selected {
-    background-color: #aaaaaa;
-}
-
-/*选中的a元素-后面的div要显示*/
-.titleTree a.selected + div {
-    display: block;
-}
-
-/*选中的a元素-如果后面有div,此a元素要插入标志,div中的a元素选中后,此div前面的a元素要插入标志*/
-.titleTree a.selected:has(+div)::after,
-.titleTree a:has(+div a.selected)::after {
+/*通过open控制右箭头*/
+.titleTree a:has(+div.open)::after {
     top: 10px;
     right: 5px;
     opacity: 1;
@@ -104,15 +99,16 @@
     border-left: 5px solid transparent;
 }
 
-/*div中的a元素选中后,div的的样式*/
-.titleTree div:has(a.selected) {
-    display: block;
-}
-
 /*文章内容区*/
 .articleTitle {
     font-size: 25px;
     color: #2E3842;
+}
+
+.publishTime {
+    font-weight: bold;
+    font-size: 14px;
+    color: #3873af;
 }
 
 /*作者区域*/
@@ -136,7 +132,7 @@
 }
 
 .siteImg {
-    margin: 0px 5px;
+    margin: 0 5px;
     width: 20px;
     height: 20px;
 }
