--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -405,3 +405,40 @@ td .editButton {
     font-weight: bold;
     padding: 30px 0;
 }
+
+/*上传组件样式*/
+
+.upload-div * {
+    box-sizing: border-box;
+}
+
+.upload-div {
+    position: relative;
+    width: 100%;
+}
+
+.upload-div a {
+    z-index: 0;
+    width: 60%;
+    height: 100%;
+    display: inline-block;
+    background: #45bf9e;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+}
+
+.upload-div input {
+    display: inline-block;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    width: 60%;
+    height: 100%;
+}
+
+.upload-div input:hover {
+    cursor: pointer;
+}
