--- a/src/main/resources/templates/front-template/articles.html
+++ b/src/main/resources/templates/front-template/articles.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name='description' content=''>
+    <meta name='keywords' content=''>
     <title>专题文章</title>
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/js/lib/prism/prism.css">
     <script src="/js/lib/prism/prism.js"></script>
     <script src="/js/base.js"></script>
@@ -28,7 +31,7 @@
             <img class="searchImg" src="/img/searchicon.svg" onclick="gSearchByKey(event)">
         </div>
         <div class="userInfoDiv">
-            <span>朱海保</span>
+            <span></span>
         </div>
     </div>
     <div class="navBar">
@@ -36,8 +39,8 @@
         <i id="treeBar" class="fa fa-bars treeBar" onclick="treeBarFun();"></i>
         <nav>
             <ul id="topNav">
-                <!--第一个文章标签,固定显示-->
                 <li id="articleLabel"><a href="/articles/index.html">点滴文章</a></li>
+                <li id=topNav_placeholders></li>
             </ul>
         </nav>
         <div class="arrow" id="rightArrow"></div>
@@ -46,11 +49,15 @@
 <div class="mainDiv">
     <div class="titleTreeDiv700 titleTreeDiv" id="titleTreeDiv">
         <p class='subjectTitle' data-sub-dir></p>
-        <nav class="titleTree" id="titleTree"></nav>
+        <hr>
+        <nav class="titleTree" id="titleTree"><a id=article_placeholders></a></nav>
     </div>
     <div class="contentDiv">
         <section>
-            <header><span class='articleTitle'></span></header>
+            <header>
+                <span class='articleTitle' id='articleTitle'></span>
+                <span class='publishTime'>lastUpdated : </span>
+            </header>
             <section title="author" class="author">
                 <img id="authorLogo" src="/img/subject-logo4.svg">
                 <a class="authorName zcool-xiaowei-regular" href="https://twitter.com/jumperoverfgw">朱海保</a>
@@ -63,9 +70,9 @@
     </div>
 </div>
 <script type="text/javascript">
-    loadNav();
-    loadSubjectArticleTree();
+    showNavBar();
 </script>
+<script src="/js/articleTree.js"></script>
 </body>
 
 </html>
