--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -34,7 +34,7 @@
                 <img th:src="@{/img/tips.svg}" style="vertical-align: middle;"
                      onmouseover="tipDiv.style.display = 'inline-flex';"
                      onmouseout="tipDiv.style.display = 'none';">
-                <button class="deployButton" onclick="deployTopNav(this)">发布导航</button>
+                <button class="deployButton" onclick="deployTopNav(this)">发布主页</button>
                 <div class="tipDiv" id="tipDiv">
                     <div class='tipLeft'></div>
                     <div class="tipRight">
