恢复导航的发布

--- a/src/main/resources/templates/front-template/index.html
+++ b/src/main/resources/templates/front-template/index.html
@@ -80,7 +80,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script type="module" src="/js/indexSearch.js"></script>
 </body>
