--- a/src/main/resources/templates/front-template/article.html
+++ b/src/main/resources/templates/front-template/article.html
@@ -91,7 +91,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
