--- a/src/main/resources/templates/front-template/articles.html
+++ b/src/main/resources/templates/front-template/articles.html
@@ -94,7 +94,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    showNavBar();
+    loadNav();
 </script>
 <script src="/js/articleTree.js"></script>
 <script type="module" src="/js/indexSearch.js"></script>
