--- a/src/main/resources/templates/front-template/index.html
+++ b/src/main/resources/templates/front-template/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="/css/base.css"/>
     <link rel="stylesheet" href="/css/index.css"/>
+    <link rel="stylesheet" href="/css/devices.css"/>
 
 </head>
 
