--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -50,9 +50,10 @@
                 <th>所属主题</th>
                 <th>操作</th>
                 <th>发布状态</th>
+                <th>关键词</th>
             </tr>
             <tr th:each="sub , stat:${data.content}" th:data-tr-gen="${sub.id}" th:data-parent-id="${sub.pid}">
-                <td class="updateTd" ondblclick="updateTitle(event)" th:attr="data-td-id=${sub.id}"
+                <td class="updateTd" ondblclick="updateTitle(event,1)" th:attr="data-td-id=${sub.id}"
                     th:text="${sub.title}"></td>
                 <td data-type-enName class="updateTd" ondblclick="updateTitle(event,2)" th:attr="data-td-id=${sub.id}"
                     th:text="${sub.enName}"></td>
@@ -75,6 +76,8 @@
                         <button class="deployButton" onclick="deploy(this)">发布</button>
                     </th:block>
                 </td>
+                <td class="updateTd" ondblclick="updateTitle(event,3)" th:attr="data-td-id=${sub.id}"
+                    th:text="${sub.articleKeyword}"></td>
             </tr>
         </table>
         <nav th:insert="~{common::page}"></nav>
@@ -116,21 +119,20 @@
         //失去焦点时要提示保存
         currentTd.firstElementChild.onblur = function (e) {
             if (!updated)
-                update(e);
+                update(e, type);
         }
         currentTd.firstElementChild.onkeyup = function (e) {
             if (e.key === 'Enter') {
-                update(e);
+                update(e, type);
                 updated = true;
             }
         }
 
-        async function update(e) {
+        async function update(e, type) {
             let newValue = e.target.value;
             if (e.target.value !== oldValue) {
                 if (currentTd.hasAttribute("data-type-enName")) {
                     let checked = await checkEnName(1, e.target, "/article/checkEnName");
-                    console.log(checked)
                     if (!checked) return;
                 }
                 let save = confirm("save updated?")
@@ -142,10 +144,12 @@
                     }
                     let articleId = currentTd.dataset.tdId;
                     let result;
-                    if (currentTd.hasAttribute("data-type-enName")) {
-                        result = await updateTitleToServer(articleId, '', newValue);
-                    } else {
-                        result = await updateTitleToServer(articleId, newValue, '');
+                    if (type === 2) {//英文标题
+                        result = await updateTitleToServer(articleId, '', newValue, '');
+                    } else if (type === 1) {//标题
+                        result = await updateTitleToServer(articleId, newValue, '', '');
+                    } else if (type === 3) {//关键词
+                        result = await updateTitleToServer(articleId, '', '', newValue);
                     }
                     if (result.statusText === 'ok') {
                         currentTd.innerHTML = newValue;
@@ -164,11 +168,12 @@
         }
     }
 
-    async function updateTitleToServer(id, title, enName) {
+    async function updateTitleToServer(id, title, enName, articleKeyword) {
         let formData = new FormData();
         formData.set("id", id);
         if (title) formData.set("title", title);
         if (enName) formData.set("enName", enName);
+        if (articleKeyword) formData.set("articleKeyword", articleKeyword);
         let response = await fetch("/article/updateTitle", {
             method: "POST",
             body: formData,
@@ -319,6 +324,7 @@
                                 <a href="#"><img alt="edit subject" title='edit subject' class="edit" src="/img/delete.svg" onclick="delArticle(event);"></a>
                             </td>
                             <td class="tdCenter">${status}</td>
+                            <td class="updateTd" ondblclick="updateTitle(event,3)" data-td-id=${trData.id}>${trData.articleKeyword ? trData.articleKeyword : ''}</td>
                         </tr>`;
             table.tBodies[0].insertAdjacentHTML("beforeend", trHtml);
         });
