--- a/src/main/resources/templates/front-template/index.html
+++ b/src/main/resources/templates/front-template/index.html
@@ -33,8 +33,7 @@
         </div>
     </div>
     <div class="navBar">
-        <div class="arrow" id="leftArrow"></div>
-        <i id="treeBar" class="fa fa-bars treeBar" onclick="treeBarFun();"></i>
+        <div class="arrow" id="leftArrow" hidden></div>
         <nav>
             <ul id="topNav">
                 <!--第一个文章标签,固定显示-->
