--- a/frontend/css/article.css
+++ b/frontend/css/article.css
@@ -89,3 +89,12 @@
 article {
     padding: 5px 20px;
 }
+
+/*导航按钮显示*/
+.navBar ul {
+    padding-left: 115px;
+}
+
+#articleLabel {
+    left: 35px;
+}
